<resources>
    <string name="app_name">Home Automation</string>
    <string name="cancel"> Cancel </string>
    <string name="connect"> Connect </string>
    <string name="email"> Email </string>
    <string name="enter"> Enter </string>
    <string name="forgot_password"> Forgot password </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leave"> Leave </string>
    <string name="login"> Login </string>
    <string name="login_here"> Login here </string>
    <string name="logout"> Logout </string>
    <string name="name"> Name </string>
    <string name="navigation_drawer_open"> Open navigation drawer </string>
    <string name="navigation_drawer_close"> Close navigation drawer </string>
    <string name="new_password"> New password </string>
    <string name="new_password_confirm"> Confirm password </string>
    <string name="password"> Password </string>
    <string name="pick_start_date"> Pick start date </string>
    <string name="pin"> PIN </string>
    <string name="profile"> Profile </string>
    <string name="register"> Register </string>
    <string name="register_here"> Register here </string>
    <string name="remember_me"> Remember me </string>
    <string name="reset"> Reset </string>
    <string name="return_text"> Return </string>
    <string name="save"> Save </string>
    <string name="send"> Send </string>
    <string name="splash_screen_copyright"> \u00a9 2021 Universe Inc. </string>
    <string name="temperature"> Temperature </string>
</resources>