<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6FC4BD"
    tools:context=".AuthenticationPart.ActivityRegister">

    <ImageView
        android:id="@+id/registerLogo"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:src="@drawable/ic_universe2_svg"
        app:layout_constraintBottom_toTopOf="@id/registerCenterLayout"
        app:layout_constraintDimensionRatio="630:248"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#fff" />

    <LinearLayout
        android:id="@+id/registerCenterLayout"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerLogo"
        app:layout_constraintWidth_percent=".9">

        <EditText
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="@drawable/ic_input_rounded_border"
            android:backgroundTint="#fff"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="16sp"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10sp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:background="@drawable/ic_input_rounded_border"
            android:backgroundTint="#fff"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="16sp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="10sp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:background="@drawable/ic_input_rounded_border"
            android:backgroundTint="#fff"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="16sp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10sp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/registerPIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:background="@drawable/ic_input_rounded_border"
            android:backgroundTint="#fff"
            android:drawableStart="@drawable/ic_pin"
            android:drawablePadding="16sp"
            android:hint="@string/pin"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="10sp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:background="@drawable/button_with_white_border_rounded"
            android:stateListAnimator="@null"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp">

            <TextView
                android:id="@+id/registerLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_here"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>