<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6FC4BD"
    tools:context=".AuthenticationPart.ActivityLogin">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:src="@drawable/ic_universe2_svg"
        app:layout_constraintBottom_toTopOf="@id/loginCenterLayout"
        app:layout_constraintDimensionRatio="630:248"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#fff" />

    <LinearLayout
        android:id="@+id/loginCenterLayout"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".9">

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="@drawable/ic_input_rounded_border"
            android:backgroundTint="#fff"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10sp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="10sp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:background="@drawable/ic_input_rounded_border"
            android:backgroundTint="#fff"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10sp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10sp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/loginRememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:buttonTint="#fff"
            android:text="@string/remember_me"
            android:textAlignment="textStart"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:background="@drawable/button_with_white_border_rounded"
            android:stateListAnimator="@null"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp">

            <TextView
                android:id="@+id/loginRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_here"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>