<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6FC4BD">

    <Button
        android:id="@+id/heating_temperature"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/button_with_white_border"
        android:stateListAnimator="@null"
        android:text="Current temperature: "
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/heating_programs_layout"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:fillViewport="true"
        android:paddingHorizontal="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heating_temperature">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/heating_add_program_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heating_temperature">

                <TextView
                    android:id="@+id/heating_add_program_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add program"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/heating_add_program_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/button_with_white_border"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:padding="10sp"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/heating_add_program_title" />

                <EditText
                    android:id="@+id/heating_add_program_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/button_with_white_border"
                    android:hint="@string/temperature"
                    android:inputType="numberDecimal"
                    android:padding="10sp"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/heating_add_program_name" />

                <TextView
                    android:id="@+id/heating_add_program_start_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/pick_start_date"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/heating_add_program_temperature" />

                <DatePicker
                    android:id="@+id/heating_add_program_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/button_with_white_border"
                    android:calendarViewShown="true"
                    android:spinnersShown="false"
                    app:layout_constraintTop_toBottomOf="@id/heating_add_program_start_date_text" />

                <TextView
                    android:id="@+id/heating_add_program_start_time_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="Pick start time"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/heating_add_program_start_date" />

                <TimePicker
                    android:id="@+id/heating_add_program_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/button_with_white_border"
                    app:layout_constraintTop_toBottomOf="@id/heating_add_program_start_time_text" />

                <TextView
                    android:id="@+id/heating_add_program_end_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="Pick end date"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/heating_add_program_start_time" />

                <DatePicker
                    android:id="@+id/heating_add_program_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/button_with_white_border"
                    android:calendarViewShown="true"
                    android:spinnersShown="false"
                    app:layout_constraintTop_toBottomOf="@id/heating_add_program_end_date_text" />

                <TextView
                    android:id="@+id/heating_add_program_end_time_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="Pick end time"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/heating_add_program_end_date" />

                <TimePicker
                    android:id="@+id/heating_add_program_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/button_with_white_border"
                    app:layout_constraintTop_toBottomOf="@id/heating_add_program_end_time_text" />

                <Button
                    android:id="@+id/heating_add_program_cancel"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/button_with_white_border"
                    android:text="@string/cancel"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@id/heating_add_program_save"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/heating_add_program_end_time" />

                <Button
                    android:id="@+id/heating_add_program_save"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/button_with_white_border"
                    android:text="@string/save"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/heating_add_program_cancel"
                    app:layout_constraintTop_toBottomOf="@id/heating_add_program_end_time" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/heating_programs_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp" />

            <Button
                android:id="@+id/heating_add_program_bottom_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@drawable/button_with_white_border"
                android:stateListAnimator="@null"
                android:text="New program"
                android:textColor="#fff"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heating_programs_layout"
                app:layout_constraintWidth_percent=".5" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>